# kalshi-ai-trading-bot

./: .bandit  .dockerignore  .env.docker.template  .flake8  .pylintrc  Dockerfile  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  PAPER_TRADING_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_PLAN.md  QUICKSTART_OPENROUTER.md  UPGRADE_GUIDE.md  audit_odds.py  axiom.py  axiom_dashboard.py  check_db.py  docker-compose.dev.yml  docker-compose.yml  env.template  filter_log.py  manual_test_decide.py  pyproject.toml  pytest.ini  read_log.py  read_log_clean.py  requirements-dev.txt  requirements.txt  run_tests.py  tail_log.py  test_arbitrage_integration.py  test_filters.py  test_poly.py  test_series.py  verify_kalshi.py  verify_odds.py  (+2 more)
.claude/: settings.local.json
.github/workflows/: code-quality.yml  docker.yml  security.yml  test.yml
config/environments/: development.yaml  production.yaml
docs/: API_REFERENCE.md  CI_CD.md  DATABASE_SCHEMA.md  DOCKER_DEPLOYMENT.md  TROUBLESHOOTING.md  TUTORIALS.md
scripts/: init-db.sql  timescale_schema.sql
src/backtesting/: __init__.py  data_loader.py  framework.py  performance_attribution.py  report_generator.py
src/clients/: kalshi_client.py  odds_client.py  openai_client.py  openrouter_client.py  polymarket_client.py  trading_client_wrapper.py  unified_ai_client.py  xai_client.py
src/config/: settings.py  settings_v2.py
src/data/: __init__.py  models.py  timescale_client.py
src/database/: __init__.py  base_repository.py  factory.py  postgres_repository.py
src/jobs/: decide.py  decide_v2.py  execute.py  ingest.py  track.py  trade.py
src/jobs/decision_strategies/: __init__.py  base_strategy.py  high_confidence_strategy.py  standard_strategy.py  strategy_selector.py
src/jobs/decision_validators/: __init__.py  budget_validator.py  cash_reserves_validator.py  category_validator.py  deduplication_validator.py  edge_validator.py  position_limits_validator.py  validation_result.py  volume_validator.py
src/strategies/: arbitrage_engine.py  filters.py  portfolio_optimization.py  unified_trading_system.py
src/utils/: database.py  edge_filter.py  health_check.py  logging_setup.py  market_screener.py  paper_trading.py  position_reconciliation.py  stop_loss_calculator.py  structs.py
tests/: README.md
tests/unit/: test_budget_validator.py  test_category_validator.py  test_deduplication_validator.py  test_volume_validator.py
